processed/jira/txt/LU/LU-17298.txt
Key:        LU-17298
Summary:    el9.3 build failed on b2_15
Link:       https://jira.whamcloud.com/browse/LU-17298
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Done
Assignee:   Oleg Drokin
Reporter:   Minh Diep - TLC
Created:    Sat, 18 Nov 2023 22:22:10 +0000
Updated:    Mon, 20 Nov 2023 09:12:07 +0000
Resolved:   Mon, 20 Nov 2023 09:12:06 +0000

--- Description ---
https://build.whamcloud.com/job/lustre-b2_15/72/arch=x86_64,build_type=client,distro=el9.3,ib_stack=inkernel/consoleText

 

Type 'make' to build Lustre.
+ make -j6 -s
Making all in .
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c: In function 'rsi_parse':
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c:347:18: error: too few arguments to function 'get_expiry'
  347 |         expiry = get_expiry(&mesg);
      |                  ^~~~~~~~~~
In file included from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c:58:
include/linux/sunrpc/cache.h:303:19: note: declared here
  303 | static inline int get_expiry(char **bpp, time64_t *rvp)
      |                   ^~~~~~~~~~
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c: In function 'rsc_parse':
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c:603:18: error: too few arguments to function 'get_expiry'
  603 |         expiry = get_expiry(&mesg);
      |                  ^~~~~~~~~~
In file included from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.c:58:
include/linux/sunrpc/cache.h:303:19: note: declared here
  303 | static inline int get_expiry(char **bpp, time64_t *rvp)
      |                   ^~~~~~~~~~
make[8]: *** [scripts/Makefile.build:299: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss/gss_svc_upcall.o] Error 1
make[8]: *** Waiting for unfinished jobs....
In file included from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/lvfs.h:44,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/obd.h:56,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/obd_class.h:38,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c:51:
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c: In function 'lu_global_init':
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/lustre_compat.h:533:32: error: too few arguments to function 'register_shrinker'
  533 | #define register_shrinker(_s) (register_shrinker(_s), 0)
      |                                ^~~~~~~~~~~~~~~~~
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c:2332:18: note: in expansion of macro 'register_shrinker'
 2332 |         result = register_shrinker(&lu_site_shrinker);
      |                  ^~~~~~~~~~~~~~~~~
In file included from include/linux/list_lru.h:13,
                 from include/linux/fs.h:13,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/libcfs/include/libcfs/linux/linux-misc.h:35,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/libcfs/include/libcfs/libcfs.h:43,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c:48:
include/linux/shrinker.h:103:27: note: declared here
  103 | extern int __printf(2, 3) register_shrinker(struct shrinker *shrinker,
      |                           ^~~~~~~~~~~~~~~~~
In file included from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/lvfs.h:44,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/obd.h:56,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/obd_class.h:38,
                 from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c:51:
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/include/lustre_compat.h:533:53: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  533 | #define register_shrinker(_s) (register_shrinker(_s), 0)
      |                                                     ^
/tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.c:2332:18: note: in expansion of macro 'register_shrinker'
 2332 |         result = register_shrinker(&lu_site_shrinker);
      |                  ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[7]: *** [scripts/Makefile.build:299: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass/lu_object.o] Error 1
make[7]: *** Waiting for unfinished jobs....
make[7]: *** [scripts/Makefile.build:585: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc/gss] Error 2
make[6]: *** [scripts/Makefile.build:585: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/ptlrpc] Error 2
make[6]: *** Waiting for unfinished jobs....
make[6]: *** [scripts/Makefile.build:585: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre/obdclass] Error 2
make[5]: *** [scripts/Makefile.build:585: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b/lustre] Error 2
make[4]: *** [Makefile:1928: /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/BUILD/lustre-2.15.3_46_g55b777b] Error 2
make[3]: *** [autoMakefile:1141: modules] Error 2
make[2]: *** [autoMakefile:673: all-recursive] Error 1
make[1]: *** [autoMakefile:543: all] Error 2
error: Bad exit status from /tmp/rpmbuild-lustre-jenkins-pVXkyVXR/TMP/rpm-tmp.nqMrj8 (%build)

--- Comment (yujian, Mon, 20 Nov 2023 09:12:07 +0000) ---
Yes, Peter. el9.3 client build passed on b2_15:

https://build.whamcloud.com/job/lustre-b2_15/74/arch=x86_64,build_type=client,distro=el9.3,ib_stack=inkernel/

--- Comment (pjones, Sun, 19 Nov 2023 19:09:12 +0000) ---
green has merged the missing patch series - is this now cleared?

--- Comment (yujian, Sat, 18 Nov 2023 22:37:41 +0000) ---
Patch https://review.whamcloud.com/c/fs/lustre-release/+/53128 "LU-16802 build: compatibility for 6.4 kernels" and other patches in the series for b2_15 branch have to be landed.
